--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,33 @@
 version: '3.8'
 
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"  # Expose Flask app on port 5000
+    depends_on:
+      - mariadb  # Ensure MariaDB starts before the app
+    environment:
+      DB_HOST: mariadb
+      DB_PORT: 3306
+      DB_NAME: yacht_building
+      DB_USER: root
+      DB_PASSWORD: rootpassword
+
   mariadb:
-    image: mariadb:10.5  # MariaDB version
+    image: mariadb:10.5
     container_name: mariadb_container
     restart: always
     ports:
-      - "3306:3306"  # Map local port 3306 to the container's port 3306
+      - "3306:3306"  # Expose MariaDB on port 3306
     environment:
-      MARIADB_INITDB_SKIP_TZINFO: 1
-      MARIADB_ROOT_PASSWORD: root
+      MARIADB_ROOT_PASSWORD: rootpassword
       MARIADB_DATABASE: yacht_building
-      MARIADB_USER: user
-      MARIADB_PASSWORD: password
     volumes:
       - db_data:/var/lib/mysql
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql  # Initialize the database
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
   db_data:
